@@ -1,5 +1,10 @@
 2008-06-24  Neal H. Walfield  <neal@gnu.org>
 
+	* server.c (server_loop): Implement cap_discard.
+	* rm.h (rm_method_id_string): Handle the RM_object_discard case.
+
+2008-06-24  Neal H. Walfield  <neal@gnu.org>
+
 	* ager.c (update_stats): When we mean ACTIVITY, use ACTIVITY, not
 	P.
 
