@@ -1,3 +1,8 @@
+2008-06-24  Neal H. Walfield  <neal@gnu.org>
+
+	* cap.h (RM_object_discard): New define.
+	(object_discard): New method.
+
 2008-06-23  Neal H. Walfield  <neal@gnu.org>
 
 	* activity.h (struct activity_stats): New fields available_local,
